# geom-ode

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
include/geom_ode/: geometry.h  nn.h  solver.h
include/geom_ode/details/: types.h
src/: solver.cpp  vector_field.cpp
src/nn/: layer.cpp  mlp.cpp  parameter.cpp  tensor.cpp  vector_field.cpp
